Implement and use a dkminphys() that calls the parent device's minphys function with b_dev temporarily adjusted to the parent device's dev_t.

Fixes PR/37390.